Bug 418175 - Keyboard repeat delay not applied immediately when clicking "Apply", needs logout/login
Summary: Keyboard repeat delay not applied immediately when clicking "Apply", needs lo...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keyboard (other bugs)
Version First Reported In: 5.18.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 430062 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-02-25 13:19 UTC by Wolfgang Bauer
Modified: 2020-12-22 21:25 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Bauer 2020-02-25 13:19:33 UTC
SUMMARY
If you change the keyboard repeat delay in systemsettings5->Input->Keyboard and press "Apply", the setting is not applied immediately (neither in the test field nor in other applications).
Logging out and in again is necessary to actually apply the settings.

This is on X11 and it apparently is a regression in Plasma 5.18 (so it's not a duplicate of bug#410626 IMHO, which is older and about Wayland).
I tried on an openSUSE Leap 15.2 LiveCD too (which is a snapshot about a month old and still contains Plasma 5.17.5), and it works there.
Comment 1 Wolfgang Bauer 2020-02-25 13:43:56 UTC
Likely related, but I forgot to mention it: the keyboard repeat speed has the same problem.
Comment 2 Weng Xuetian 2020-12-18 06:10:15 UTC
Git commit 27a64b96f224b510234c76c22bcc6407a86ea4b8 by Weng Xuetian.
Committed on 18/12/2020 at 06:08.
Pushed by xuetianweng into branch 'master'.

Reparse the key repeat rate config when we try to load it.

Right now due to the fact that it is a shared config, we may load the
old value from memory.
FIXED-IN: 5.21

M  +4    -1    kcms/keyboard/keyboard_hardware.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/27a64b96f224b510234c76c22bcc6407a86ea4b8
Comment 3 Nate Graham 2020-12-18 19:37:25 UTC
*** Bug 430062 has been marked as a duplicate of this bug. ***