Reparse the key repeat rate config when we try to load it.

Right now due to the fact that it is a shared config, we may load the
old value from memory.

BUG: 418175
FIXED-IN: 5.21