kcms/keyboard/keyboard_hardware.cpp
@@ -72,7 +72,9 @@ int set_repeat_mode(bool enabled)
 
 void init_keyboard_hardware()
 {
-    KConfigGroup config(KSharedConfig::openConfig( QStringLiteral("kcminputrc") ), "Keyboard");
+	auto inputConfig = KSharedConfig::openConfig( QStringLiteral("kcminputrc") );
+	inputConfig->reparseConfiguration();
+	KConfigGroup config(inputConfig, "Keyboard");
 
 	QString keyRepeatStr = config.readEntry("KeyRepeat", "accent");
 
@@ -90,4 +92,5 @@ void init_keyboard_hardware()
         KModifierKeyInfo keyInfo;
         keyInfo.setKeyLocked(Qt::Key_NumLock, numlockState == STATE_ON);
 	}
+	XFlush(QX11Info::display());
 }
